EXTRA_DIST = $(gfx_DATA)

gfxdir = $(datadir)/@PACKAGE@/gfx

gfx_DATA = \
SmallStone.png  anim3.png     bauer.png         dame.png      \
anim1.png       anim4.png     turm.png          StoneFont.png \
anim10.png      anim5.png     black.png         koenig.png \
anim11.png      anim6.png     white.png\
anim12.png      anim7.png     board.png         laeufer.png   wood.png\
anim13.png      anim8.png     bomb.png   \
anim14.png      anim9.png     bombe.png  \
anim15.png      atom-rot.png  button-light.png  select.png\
anim2.png       atom.png      button.png        springer.png
